# rbac-builder

./: .gitignore  CLAUDE.md  RBAC_BUILDER_DESIGN.md  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
configs/customers/iseatz/: 2026.05.12iseatz_rbac_config.json  config.json
configs/templates/: minimal-2-env.json  standard-4-env.json
core/: __init__.py  environment.py  ld_actions.py  rbac_knowledge.py  session_tracker.py
docs/: ARCHITECTURE_FLOW.md  BACKLOG.md  ENHANCEMENT_TRACKER.md  RBAC_CONCEPTS.md  ROADMAP.md  ROLE_ATTRIBUTES_EXPLAINED.md  moonshot-manifest.md  moonshot-manifest.txt  moonshot-manifest.typ
docs/delivery-package/: DLD.md  HLD.md  PSEUDOLOGIC_AND_TESTS.md
docs/phases/: README.md
docs/phases/phase1/: DESIGN.md  PYTHON_CONCEPTS.md  README.md
docs/phases/phase11/: DESIGN.md  PROJECT_PREFIXED_TEAMS.md  README.md  (+3 more)
docs/role-attribute-pattern/: DLD.md  HLD.md  PSEUDOLOGIC_AND_TESTS.md
models/: __init__.py  config.py  environment.py  permissions.py  team.py
services/: __init__.py  ai_advisor.py  config_importer.py  deployer.py  doc_generator.py  ld_client.py  ld_client_interface.py  ld_exceptions.py  package_generator.py  payload_builder.py  storage.py  terraform_generator.py  validation.py
tests/: __init__.py  test_ai_advisor.py  test_config_upload.py  test_critical_environments.py  test_deploy_ui.py  test_deployer.py  test_ld_client.py  test_models.py  test_observability_permissions.py  test_package_generator.py  test_payload_builder.py  test_project_prefixed_teams.py  test_role_attributes.py  test_session_tracker.py  test_storage.py  test_terraform_generator.py  test_ui_modules.py  test_validation.py
ui/: __init__.py  advisor_tab.py  deploy_tab.py  matrix_tab.py  reference_tab.py  setup_tab.py
(+60 files in other folders)
